# promocode

./: .hindent.yaml  .stylish-haskell.yaml  CHANGELOG.md  README.md  promocode.cabal
app/: Main.hs
app/Data/: Offer.hs
lib/: Command.hs  Lang.hs  Parser.hs
lib/Data/: Offer.hs  Transaction.hs
sample/: discount.code
tests/: CommandSpec.hs
