cabal-version:      2.4
name:               promocode
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Khanh Hua
maintainer:         khanh.hua@cleverbridge.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

executable promocode
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.3.0
      , mtl ^>=2.2.2
    hs-source-dirs:   app
    default-language: Haskell2010


library promocode-lib
    -- Modules included in this executable, other than Main.
    exposed-modules:
        Data.Transaction
      , Lang
      , Parser
      , Command
    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0
    hs-source-dirs:   lib
    default-language: Haskell2010

test-suite spec
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    other-modules:
        CommandSpec
    hs-source-dirs: tests
    ghc-options: -Wall -fllvm 
    build-depends:
        promocode-lib
      , mtl ^>=2.2.2
      , time ^>=1.9.3
      , base ^>=4.14.3.0
      , hspec ==2.*
    default-language: Haskell2010
    build-tool-depends: hspec-discover:hspec-discover == 2.*